# FastAPI_vod

./: README.md  day1 정리 .md  day1.py  day2 정리 .md  main.py  pyproject.toml  temp.py  temp2.py  test.sh  test_day2.py  test_simple.py  test_temp.py
.github/workflows/: ci.yml
day1/: pyproject.toml  temp.py
