[tool.poetry]
name = "FastAPI_vod"
version = "0.1.0"
description = ""
authors = ["TeaCat-Neya <TeaCat0416@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "24.10.0"
ruff = "0.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[too.ruff]
target-version = "py311"